# whatsapp-memories

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml
backend/: api_models.py  main.py  process_whatsapp_messages.py
backend/data_in/: demo_chat.txt
backend/routers/: messages.py
backend/utils/: cache_utils.py  helpers.py  llm_utils.py  models.py  prompts.py
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DEPLOYMENT.md  OPERATIONS.md  PRIVACY.md  TROUBLESHOOTING.md  USER_GUIDE.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/api/exchanges/[exchangeId]/: route.ts
frontend/app/api/exchanges/merge-multiple/: route.ts
frontend/app/api/messages/: route.ts
frontend/app/api/messages/delete/: route.ts
frontend/app/components/: MessageBubble.tsx  SidebarItem.tsx
frontend/app/exchanges/: page.tsx
frontend/app/exchanges/[exchangeId]/: page.tsx
